# admob-mediation-assistant

./: .gitignore  README.md  example.md
backend/: README.md  pyproject.toml  run.sh
backend/app/: agent.py  knowledge.py  schemas.py  server.py  smoke.py
demo/: README.md  admob-page.html  admob-page.js  record.mjs  replay-backend.mjs  stage.html
docs/: mediation-genai-assistant-design.md
extension/: README.md  build.mjs  manifest.json  package-lock.json  package.json  tsconfig.json
extension/dev/: preview-empty.html  preview.html
extension/scripts/: generate_icons.py
extension/src/background/: service-worker.ts
extension/src/content/: content.ts  dom.ts
extension/src/shared/: protocol.ts
extension/src/sidepanel/: index.html  main.ts  styles.css
extension/tests/: dom.spec.mjs  harness.ts  real-dom.spec.mjs
extension/tools/: pw-shot.mjs
