[project]
name = "admob-agent-backend"
version = "0.1.0"
description = "ADK + Gemini backend for the AdMob Mediation assistant"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=1.32.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
